force-app/main/default/objects/VI_Parcours__c/fields/VI_DateDeNaissanceAF__c.field-meta.xml
<CustomField>
    <fullName>VI_DateDeNaissanceAF__c</fullName>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>