force-app/main/default/objects/VI_Parcours__c/fields/VI_DateDuRappelTache__c.field-meta.xml
<CustomField>
    <fullName>VI_DateDuRappelTache__c</fullName>
    <label>Date du rappel</label>
    <type>Date</type>
</CustomField>