force-app/main/default/objects/VI_Parcours__c/fields/VI_DateEcheanceTache__c.field-meta.xml
<CustomField>
    <fullName>VI_DateEcheanceTache__c</fullName>
    <label>Date échéance de la tâche</label>
    <type>Date</type>
</CustomField>