force-app/main/default/objects/VI_Parcours__c/fields/VI_DateEnvoiEnveloppe__c.field-meta.xml
<CustomField>
    <fullName>VI_DateEnvoiEnveloppe__c</fullName>
    <formula>VI_Case__r.VI_DateEnvoiEnveloppe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date d&apos;envoi enveloppe</label>
    <type>Date</type>
</CustomField>