force-app/main/default/objects/VI_Parcours__c/fields/VI_DateLastModifFormTarifaireAcheminemt__c.field-meta.xml
<CustomField>
    <fullName>VI_DateLastModifFormTarifaireAcheminemt__c</fullName>
    <description>Uniquement pour CHF - champ technique (estimation de lirePDL). Necessaire pour le lancement des prix et remises pour remplir les tableaux annexes des CPV</description>
    <label>Date last modif Formule Tarif acheminemt</label>
    <type>DateTime</type>
</CustomField>