force-app/main/default/objects/VI_Parcours__c/fields/VI_DateRelanceCPV1__c.field-meta.xml
<CustomField>
    <fullName>VI_DateRelanceCPV1__c</fullName>
    <label>Date Relance CPV 1</label>
    <type>Date</type>
</CustomField>