force-app/main/default/objects/VI_Parcours__c/fields/VI_DateRelanceCPV2__c.field-meta.xml
<CustomField>
    <fullName>VI_DateRelanceCPV2__c</fullName>
    <label>Date Relance CPV 2</label>
    <type>Date</type>
</CustomField>