force-app/main/default/objects/VI_Parcours__c/fields/VI_DateRelanceCPV3__c.field-meta.xml
<CustomField>
    <fullName>VI_DateRelanceCPV3__c</fullName>
    <label>Date Relance CPV 3</label>
    <type>Date</type>
</CustomField>