force-app/main/default/objects/VI_Parcours__c/fields/VI_DateVenteBrute__c.field-meta.xml
<CustomField>
    <fullName>VI_DateVenteBrute__c</fullName>
    <label>Date vente brute</label>
    <type>Date</type>
</CustomField>