force-app/main/default/objects/VI_Parcours__c/fields/VI_DateVenteEnCoursDeSignature__c.field-meta.xml
<CustomField>
    <fullName>VI_DateVenteEnCoursDeSignature__c</fullName>
    <label>Date vente en cours de signature</label>
    <type>Date</type>
</CustomField>