force-app/main/default/objects/VI_Parcours__c/fields/VI_DateVenteNette__c.field-meta.xml
<CustomField>
    <fullName>VI_DateVenteNette__c</fullName>
    <label>Date vente nette</label>
    <type>Date</type>
</CustomField>