force-app/main/default/objects/VI_Parcours__c/fields/VI_DebutValidity2__c.field-meta.xml
<CustomField>
    <fullName>VI_DebutValidity2__c</fullName>
    <description>Début de Validité du deuxième code promo sélectionné</description>
    <label>Début validité code promo 2</label>
    <type>TextArea</type>
</CustomField>