force-app/main/default/objects/VI_Parcours__c/fields/VI_DebutValidity__c.field-meta.xml
<CustomField>
    <fullName>VI_DebutValidity__c</fullName>
    <description>Début de Validité d&apos;un code promo</description>
    <label>Début validité code promo</label>
    <type>TextArea</type>
</CustomField>