force-app/main/default/objects/VI_Parcours__c/fields/VI_DerniereEtapeModifiee__c.field-meta.xml
<CustomField>
    <fullName>VI_DerniereEtapeModifiee__c</fullName>
    <description>Champ alimenté automatiquement quand le PP souhaite reprendre le parcours plus tard. (confirmation Bouton &quot;Reprendre le parcours plus tard&quot;).</description>
    <label>Dernière étape modifiée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etape 1 - Choix de la situation</fullName>
            </value>
            <value>
                <fullName>Etape 1 - Choix de l&apos;énergie</fullName>
            </value>
            <value>
                <fullName>Etape 2 - Identification client</fullName>
            </value>
            <value>
                <fullName>Etape 3 - Identification local</fullName>
            </value>
            <value>
                <fullName>Etape 4 - Estimation de la consommation</fullName>
            </value>
            <value>
                <fullName>Etape 5 - Constitution du panier client</fullName>
            </value>
            <value>
                <fullName>Etape 6 - Informations complémentaires</fullName>
            </value>
            <value>
                <fullName>Etape 7 - Saisie des moyens de paiement</fullName>
            </value>
            <value>
                <fullName>Etape 8 - Récapitulatif de la souscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>