force-app/main/default/objects/VI_Parcours__c/fields/VI_DescriptifPromotion__c.field-meta.xml
<CustomField>
    <fullName>VI_DescriptifPromotion__c</fullName>
    <label>Descriptif de la Promotion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>