force-app/main/default/objects/VI_Parcours__c/fields/VI_DescriptionTache__c.field-meta.xml
<CustomField>
    <fullName>VI_DescriptionTache__c</fullName>
    <label>Description tâche</label>
    <type>TextArea</type>
</CustomField>