force-app/main/default/objects/VI_Parcours__c/fields/VI_DispositifChauffageSaisieConso__c.field-meta.xml
<CustomField>
    <fullName>VI_DispositifChauffageSaisieConso__c</fullName>
    <description>Le PP choisi, en fonction du prospect au téléphone ; le dispositif de chauffage utilisé (Individuel, Collectif)</description>
    <label>Dispositif chauffage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individuel</fullName>
            </value>
            <value>
                <fullName>Collectif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>