force-app/main/default/objects/VI_Parcours__c/fields/VI_DispositifEauChaudeSaisieConso__c.field-meta.xml
<CustomField>
    <fullName>VI_DispositifEauChaudeSaisieConso__c</fullName>
    <description>Le PP choisi, en fonction du prospect au téléphone ; le dispositif de l&apos;eau chaude (Individuel, Collectif)</description>
    <label>Dispositif Eau chaude</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collectif</fullName>
            </value>
            <value>
                <fullName>Individuel</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Je ne sais pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>