force-app/main/default/objects/VI_Parcours__c/fields/VI_DonneesVente__c.field-meta.xml
<CustomField>
    <fullName>VI_DonneesVente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Données Vente</label>
    <referenceTo>Donnees_Vente__c</referenceTo>
    <relationshipLabel>Parcours</relationshipLabel>
    <relationshipName>VI_Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>