force-app/main/default/objects/VI_Parcours__c/fields/VI_DroiteGaucheRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_DroiteGaucheRechercheLocal__c</fullName>
    <description>Section champs complémentaires</description>
    <label>Droite / Gauche</label>
    <length>255</length>
    <type>Text</type>
</CustomField>