force-app/main/default/objects/VI_Parcours__c/fields/VI_EleckWhHTHCPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_EleckWhHTHCPanierClient__c</fullName>
    <description>Champ pour affichage du détail du prix de l&apos;électricité au kWh HT
- Concerne heures creuses pour un compteur double</description>
    <label>Electricité kWh HT HC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>