force-app/main/default/objects/VI_Parcours__c/fields/VI_EleckWhHTPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_EleckWhHTPanierClient__c</fullName>
    <description>Champ pour affichage du détail du prix de l&apos;électricité au kWh HT</description>
    <label>Electricité kWh HT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>