force-app/main/default/objects/VI_Parcours__c/fields/VI_EleckWhTTCHCPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_EleckWhTTCHCPanierClient__c</fullName>
    <description>Champ pour affichage du détail du prix de l&apos;électricité au kWh TTC
- Heure creuses</description>
    <label>Electricité kWh TTC HC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>