force-app/main/default/objects/VI_Parcours__c/fields/VI_EleckWhTTCPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_EleckWhTTCPanierClient__c</fullName>
    <description>Champ pour affichage du détail du prix de l&apos;électricité au kWh TTC</description>
    <label>Electricité kWh TTC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>