force-app/main/default/objects/VI_Parcours__c/fields/VI_Email2Client__c.field-meta.xml
<CustomField>
    <fullName>VI_Email2Client__c</fullName>
    <description>Champ de création client</description>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>