force-app/main/default/objects/VI_Parcours__c/fields/VI_Email_CPV__c.field-meta.xml
<CustomField>
    <fullName>VI_Email_CPV__c</fullName>
    <description>Champ email supplémentaire en cas de volonté du client de donner une adresse email différente pour l&apos;envoi des CPV</description>
    <label>Email CPV</label>
    <type>Email</type>
</CustomField>