force-app/main/default/objects/VI_Parcours__c/fields/VI_Email_CPV_IsFavori__c.field-meta.xml
<CustomField>
    <fullName>VI_Email_CPV_IsFavori__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cochée si l&apos;email saisi dans le champ Email CPV est celui qu&apos;il faut privilégier pour toutes les communications</description>
    <label>Email CPV Favori</label>
    <type>Checkbox</type>
</CustomField>