force-app/main/default/objects/VI_Parcours__c/fields/VI_Email_Relance_CPV__c.field-meta.xml
<CustomField>
    <fullName>VI_Email_Relance_CPV__c</fullName>
    <description>Ce chant remplis la parti variable de l&apos;email template &quot;Email n°5 - Relance CPV&quot;  en étant égale aux champs VI_Email_Relance_CPV 1, 2, 3, 4 ou 5 de Donées Parcours</description>
    <label>Email Relance CPV</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>