force-app/main/default/objects/VI_Parcours__c/fields/VI_EmailEnvoye__c.field-meta.xml
<CustomField>
    <fullName>VI_EmailEnvoye__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ coché lorsque l&apos;email envoyé au client est envoyé</description>
    <label>Email envoyé</label>
    <type>Checkbox</type>
</CustomField>