force-app/main/default/objects/VI_Parcours__c/fields/VI_EmailPrincipalCreationClient__c.field-meta.xml
<CustomField>
    <fullName>VI_EmailPrincipalCreationClient__c</fullName>
    <description>Champ de création client</description>
    <label>Email principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email 1</fullName>
                <default>true</default>
                <label>Email 1</label>
            </value>
            <value>
                <fullName>Email 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>