force-app/main/default/objects/VI_Parcours__c/fields/VI_EnergieChauffageSaisieConso__c.field-meta.xml
<CustomField>
    <fullName>VI_EnergieChauffageSaisieConso__c</fullName>
    <description>Le PP choisi, en fonction du prospect au téléphone ; l&apos;énergie utilisée pour le chauffage</description>
    <label>Energie chauffage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaz naturel</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Fioul</fullName>
            </value>
            <value>
                <fullName>Réseau de chaleur</fullName>
            </value>
            <value>
                <fullName>Propane GPL</fullName>
            </value>
            <value>
                <fullName>Butane</fullName>
            </value>
            <value>
                <fullName>Bois</fullName>
            </value>
            <value>
                <fullName>Charbon</fullName>
            </value>
            <value>
                <fullName>Solaire</fullName>
            </value>
            <value>
                <fullName>Autre énergie renouv</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Je ne sais pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>