force-app/main/default/objects/VI_Parcours__c/fields/VI_EnergieCuissonSaisieConso__c.field-meta.xml
<CustomField>
    <fullName>VI_EnergieCuissonSaisieConso__c</fullName>
    <description>Le PP choisi, en fonction du prospect au téléphone ; l&apos;énergie utilisée pour la cuisson</description>
    <label>Energie Cuisson</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaz naturel</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Fioul</fullName>
            </value>
            <value>
                <fullName>Butane</fullName>
            </value>
            <value>
                <fullName>Bois</fullName>
            </value>
            <value>
                <fullName>Charbon</fullName>
            </value>
            <value>
                <fullName>Mixte</fullName>
            </value>
            <value>
                <fullName>Je ne sais pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>