force-app/main/default/objects/VI_Parcours__c/fields/VI_EnveloppeCPV__c.field-meta.xml
<CustomField>
    <fullName>VI_EnveloppeCPV__c</fullName>
    <label>Enveloppe CPV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>