force-app/main/default/objects/VI_Parcours__c/fields/VI_EnveloppeMandat__c.field-meta.xml
<CustomField>
    <fullName>VI_EnveloppeMandat__c</fullName>
    <label>Enveloppe mandat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>