force-app/main/default/objects/VI_Parcours__c/fields/VI_Espace_client__c.field-meta.xml
<CustomField>
    <fullName>VI_Espace_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ pour définir si l&apos;espace client a été crée ou non</description>
    <label>Espace client</label>
    <type>Checkbox</type>
</CustomField>