force-app/main/default/objects/VI_Parcours__c/fields/VI_Estimation_conso_elec_HC__c.field-meta.xml
<CustomField>
    <fullName>VI_Estimation_conso_elec_HC__c</fullName>
    <description>Estimation Elec HC remontée par le flux Octopus</description>
    <label>Estimation consommation elec HC</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>