force-app/main/default/objects/VI_Parcours__c/fields/VI_Estimation_conso_elec_HP__c.field-meta.xml
<CustomField>
    <fullName>VI_Estimation_conso_elec_HP__c</fullName>
    <description>Estimation Elec HP ou ST remontée par le flux Octopus</description>
    <label>Estimation consommation elec HP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>