force-app/main/default/objects/VI_Parcours__c/fields/VI_Estimation_conso_gaz__c.field-meta.xml
<CustomField>
    <fullName>VI_Estimation_conso_gaz__c</fullName>
    <description>Estimation gaz remontée par le flux Octopus</description>
    <label>Estimation consommation gaz</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>