force-app/main/default/objects/VI_Parcours__c/fields/VI_EstimationFtaCode__c.field-meta.xml
<CustomField>
    <fullName>VI_EstimationFtaCode__c</fullName>
    <description>Champ technique (estimation de lirePDL). Nécessaire pour le lancement des prix et remises pour remplir les tableaux annexes des CPV</description>
    <label>Estimation fta code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>