force-app/main/default/objects/VI_Parcours__c/fields/VI_EstimationNiveauOuvertureServices__c.field-meta.xml
<CustomField>
    <fullName>VI_EstimationNiveauOuvertureServices__c</fullName>
    <description>champ technique (estimation de lirePDL). Necessaire pour le lancement des prix et remises pour remplir les tableaux annexes des CPV</description>
    <label>Estimation Niveau ouverte services</label>
    <length>50</length>
    <type>Text</type>
</CustomField>