force-app/main/default/objects/VI_Parcours__c/fields/VI_EstimationPuissance__c.field-meta.xml
<CustomField>
    <fullName>VI_EstimationPuissance__c</fullName>
    <description>Uniquement pour Elec - champ technique (estimation de lirePDL). Necessaire pour le lancement des prix et remises pour remplir les tableaux annexes des CPV</description>
    <label>Estimation puissance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>