force-app/main/default/objects/VI_Parcours__c/fields/VI_Etape_Parcours__c.field-meta.xml
<CustomField>
    <fullName>VI_Etape_Parcours__c</fullName>
    <label>Etape Parcours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>situation</fullName>
            </value>
            <value>
                <fullName>energy</fullName>
            </value>
            <value>
                <fullName>client_energy</fullName>
            </value>
            <value>
                <fullName>identification_local</fullName>
            </value>
            <value>
                <fullName>OFFER</fullName>
            </value>
            <value>
                <fullName>CONTRACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>