force-app/main/default/objects/VI_Parcours__c/fields/VI_FactureEnLigne__c.field-meta.xml
<CustomField>
    <fullName>VI_FactureEnLigne__c</fullName>
    <label>Facture en ligne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
                <default>true</default>
                <label>Oui</label>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>