force-app/main/default/objects/VI_Parcours__c/fields/VI_FinValidity2__c.field-meta.xml
<CustomField>
    <fullName>VI_FinValidity2__c</fullName>
    <description>Fin de validité du deuxième code Promo sélectionné</description>
    <label>Fin validité code promo 2</label>
    <type>TextArea</type>
</CustomField>