force-app/main/default/objects/VI_Parcours__c/fields/VI_FinValidity__c.field-meta.xml
<CustomField>
    <fullName>VI_FinValidity__c</fullName>
    <description>fin de validité d&apos;un code Promo</description>
    <label>Fin validité code promo</label>
    <type>TextArea</type>
</CustomField>