force-app/main/default/objects/VI_Parcours__c/fields/VI_FrequencePrelevementMoyendePaiement__c.field-meta.xml
<CustomField>
    <fullName>VI_FrequencePrelevementMoyendePaiement__c</fullName>
    <description>Champ étape saisie moyens de paiement pour le choix de la fréquence de prélèvement</description>
    <label>Fréquence de prélèvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensuel</fullName>
                <default>true</default>
                <label>Mensuel</label>
            </value>
            <value>
                <fullName>Tous les deux mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>