force-app/main/default/objects/VI_Parcours__c/fields/VI_GazkWhHTPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_GazkWhHTPanierClient__c</fullName>
    <description>Champ pour affichage du détail du prix du gaz au kWh HT</description>
    <label>Gaz kWh HT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>