force-app/main/default/objects/VI_Parcours__c/fields/VI_GazkWhTTCPanierClient__c.field-meta.xml
<CustomField>
    <fullName>VI_GazkWhTTCPanierClient__c</fullName>
    <description>Champ pour affichage du détail du prix du gaz au kWh TTC</description>
    <label>Gaz kWh TTC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>