force-app/main/default/objects/VI_Parcours__c/fields/VI_GazPlageConso__c.field-meta.xml
<CustomField>
    <fullName>VI_GazPlageConso__c</fullName>
    <description>Champ pour stockage de la plage de consommation de gaz de 6000 à 30000 kWh</description>
    <label>Gaz plage conso</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>