force-app/main/default/objects/VI_Parcours__c/fields/VI_HeureDuRappelTache__c.field-meta.xml
<CustomField>
    <fullName>VI_HeureDuRappelTache__c</fullName>
    <label>Heure du rappel</label>
    <type>Time</type>
</CustomField>