force-app/main/default/objects/VI_Parcours__c/fields/VI_HeureEcheanceTache__c.field-meta.xml
<CustomField>
    <fullName>VI_HeureEcheanceTache__c</fullName>
    <label>Heure échéance de la tâche</label>
    <type>Time</type>
</CustomField>