force-app/main/default/objects/VI_Parcours__c/fields/VI_IBANEnSelfCare__c.field-meta.xml
<CustomField>
    <fullName>VI_IBANEnSelfCare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indiquant si le client souhaite renseigner son IBAN en SelfCare</description>
    <label>IBAN en SelfCare</label>
    <type>Checkbox</type>
</CustomField>