force-app/main/default/objects/VI_Parcours__c/fields/VI_IBANMoyendePaiement__c.field-meta.xml
<CustomField>
    <fullName>VI_IBANMoyendePaiement__c</fullName>
    <description>Champ étape saisie moyens de paiement pour la saisie de l&apos;IBAN</description>
    <label>IBAN</label>
    <length>27</length>
    <type>Text</type>
</CustomField>