force-app/main/default/objects/VI_Parcours__c/fields/VI_Id_Contrat_Assurance__c.field-meta.xml
<CustomField>
    <fullName>VI_Id_Contrat_Assurance__c</fullName>
    <label>Id Contrat Assurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>