force-app/main/default/objects/VI_Parcours__c/fields/VI_Id_coordonnees_bancaires__c.field-meta.xml
<CustomField>
    <fullName>VI_Id_coordonnees_bancaires__c</fullName>
    <label>ID coordonnées bancaires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>