force-app/main/default/objects/VI_Parcours__c/fields/VI_Id_Local__c.field-meta.xml
<CustomField>
    <fullName>VI_Id_Local__c</fullName>
    <label>Id local</label>
    <length>255</length>
    <type>Text</type>
</CustomField>