force-app/main/default/objects/VI_Parcours__c/fields/VI_ID_Mandat__c.field-meta.xml
<CustomField>
    <fullName>VI_ID_Mandat__c</fullName>
    <description>Lorsque ce champ est rempli, cela veut dire qu&apos;il y a un mandat Sepa, cela déclenche alors le statut &quot;A signer&quot; du champ statut mandat de données de vente</description>
    <label>ID Mandat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>