force-app/main/default/objects/VI_Parcours__c/fields/VI_idCompteClient__c.field-meta.xml
<CustomField>
    <fullName>VI_idCompteClient__c</fullName>
    <label>ID Compte Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>