force-app/main/default/objects/VI_Parcours__c/fields/VI_idDocumentCPV__c.field-meta.xml
<CustomField>
    <fullName>VI_idDocumentCPV__c</fullName>
    <label>idDocumentCPV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>