force-app/main/default/objects/VI_Parcours__c/fields/VI_idDocumentMandat__c.field-meta.xml
<CustomField>
    <fullName>VI_idDocumentMandat__c</fullName>
    <label>idDocumentMandat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>