force-app/main/default/objects/VI_Parcours__c/fields/VI_IDReferenceClient__c.field-meta.xml
<CustomField>
    <fullName>VI_IDReferenceClient__c</fullName>
    <description>Donnée technique - Id du contact dans Symphonie</description>
    <label>ID Référence client</label>
    <length>30</length>
    <type>Text</type>
</CustomField>