force-app/main/default/objects/VI_Parcours__c/fields/VI_IndexBaseRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_IndexBaseRechercheLocal__c</fullName>
    <description>Section champs complémentaires
Correspond au numéro de relevé de compteur Base</description>
    <label>Index Base</label>
    <length>6</length>
    <type>Text</type>
</CustomField>