force-app/main/default/objects/VI_Parcours__c/fields/VI_IndexHCRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_IndexHCRechercheLocal__c</fullName>
    <description>Section champs complémentaires
Correspond au numéro de relevé de compteur Heure creuse</description>
    <label>Index HC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>