force-app/main/default/objects/VI_Parcours__c/fields/VI_IndexHPRechercheLocal__c.field-meta.xml
<CustomField>
    <fullName>VI_IndexHPRechercheLocal__c</fullName>
    <description>Section champs complémentaires
Correspond au numéro de relevé de compteur - Heure pleine</description>
    <label>Index HP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>