force-app/main/default/objects/VI_Parcours__c/fields/VI_InfosCompl_ChoixReleveCompteur__c.field-meta.xml
<CustomField>
    <fullName>VI_InfosCompl_ChoixReleveCompteur__c</fullName>
    <description>Champ étape Informations complémentaires
Choix du relevé de compteur</description>
    <label>Choix du relevé de compteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saisir mes relevés</fullName>
                <default>true</default>
                <label>Saisir les relevés</label>
            </value>
            <value>
                <fullName>Passer cette étape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>