force-app/main/default/objects/VI_Parcours__c/fields/VI_InfosCompl_DateContratEffectif__c.field-meta.xml
<CustomField>
    <fullName>VI_InfosCompl_DateContratEffectif__c</fullName>
    <description>Champ étape Informations complémentaires
Date effet de contrat</description>
    <label>Date contrat effectif</label>
    <type>Date</type>
</CustomField>