force-app/main/default/objects/VI_Parcours__c/fields/VI_InfosCompl_HeuresPleinesElec__c.field-meta.xml
<CustomField>
    <fullName>VI_InfosCompl_HeuresPleinesElec__c</fullName>
    <description>Champ étape Informations complémentaires
Relevé compteur : Cadran Elec
Format accepté sur le parcours Partner Community pour les index : Numéro (5,0)</description>
    <label>Heures pleines Elec (kWh)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>