force-app/main/default/objects/VI_Parcours__c/fields/VI_InfosCompl_HP_HC__c.field-meta.xml
<CustomField>
    <fullName>VI_InfosCompl_HP_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ étape Informations complémentaires
Relevé compteur : Cadran Elec</description>
    <label>HP/HC</label>
    <type>Checkbox</type>
</CustomField>