force-app/main/default/objects/VI_Parcours__c/fields/VI_InfosCompl_MiseEnServiceUrgente__c.field-meta.xml
<CustomField>
    <fullName>VI_InfosCompl_MiseEnServiceUrgente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ étape Informations complémentaires
Date effet de contrat</description>
    <label>Mise en service urgente</label>
    <type>Checkbox</type>
</CustomField>